Git_WGBH_QC/src/objects/Member_Benefits_Control__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Giving_Level_Segment_L2__c</fullName>
        <label>Giving Segment L2</label>
        <picklist>
            <picklistValues>
                <fullName>LEADERSHIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMBERSHIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON-AIR PLEDGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MID-LEVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RALPH LOWELL SOCIETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSTAINERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEHICLE GIVING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MURROW SOCIETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR DONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS PARTNERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum Parent Pledge Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Membership_Benefit_Package__c</fullName>
        <label>Membership Benefit Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Member Benefits Control</relationshipLabel>
        <relationshipName>Member_Benefits_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Parent_Pledge_Amt__c</fullName>
        <label>Minimum Parent Pledge Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <label>Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package Code</label>
        <picklist>
            <picklistValues>
                <fullName>UDECIDE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Member Benefits Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Station__c</columns>
        <columns>Product__c</columns>
        <columns>Package__c</columns>
        <columns>Gift_Type__c</columns>
        <columns>Membership_Benefit_Package__c</columns>
        <columns>Months__c</columns>
        <columns>Minimum_Parent_Pledge_Amt__c</columns>
        <columns>Maximum__c</columns>
        <columns>Giving_Level_Segment_L2__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Station__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Gift_Type__c</columns>
        <columns>Package__c</columns>
        <columns>Minimum_Parent_Pledge_Amt__c</columns>
        <columns>Maximum__c</columns>
        <columns>Membership_Benefit_Package__c</columns>
        <columns>Giving_Level_Segment_L2__c</columns>
        <columns>Months__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>MBC</fullName>
        <columns>Package__c</columns>
        <columns>NAME</columns>
        <columns>Station__c</columns>
        <columns>Minimum_Parent_Pledge_Amt__c</columns>
        <columns>Maximum__c</columns>
        <columns>Membership_Benefit_Package__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Gift_Type__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>MBC</label>
    </listViews>
    <nameField>
        <displayFormat>MBC-{0000000000}</displayFormat>
        <label>Membership Benefit Control #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Benefits Control</pluralLabel>
    <recordTypes>
        <fullName>Member_Benefits_Control</fullName>
        <active>true</active>
        <label>Member Benefits Control</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>